Ajax data previews are now slightly faster, with no column jumping/resizing issues, and with neat folded tabs

--- a/web/media/css/code_overview.css
+++ b/web/media/css/code_overview.css
@@ -1062,8 +1062,13 @@ box-shadow: 0px 2px 4px rgba(0,0,0,0.3);
 	padding: 0.4em 0.8em;
 }
 
-#datapreviews>div {
-  display: none;
+.datapreview.hidden {
+	position: absolute;
+	left: -9000px;
+}
+
+.datapreview {
+	position: static;
 }
 
 .data_content table {
